  - configurable explosiveProps (CompProperties_Explosive)
  - knockDistance now accepts floating points
  - add knockDistanceAbsorbedPercentCurve and knockDistanceMassCurve that controls how damage soak and mass affect knock distance
  - improve push angle algorithm so that it's no longer always a diagonal
  - FlyingObject: configurable props (ProjectileProperties) and accuracyRadius
  - FlyingObject_Equipable allows equipping apparel along (not just weapons)
- PawnShields: support generating biocoded shields when generating pawns
- PlaceWorker_UnderCeiling: works again (regression since RW 1.1)
- PlaceWorker_OnTopOfWalls: also considers anything with BuildingProperties.isPlaceOverableWall as a wall
- CaravanJob: fix placedThings type (old regression since RW 1.0)
- other misc minor fixes, code cleanup, and code documentation
Deprecated:
- ApparelExtension:
  - swapCondition: use vanilla apparel.gender instead
  - coverage: use vanilla apparel.layers and custom ApparelLayerDef instead
- AbilityUser.GetCompAbilityUser/AbilityUtility.Abilities: use GetCompAbilityUsers (plural)
- HediffComp_Knockback explosiveKnockback/explosionDmg/explosionSize: use explosiveProps fields instead
- FlyingObject speed/impactDamage/explosion: use props.speed/extraDamages/explosionRadius
- ProjectileExtension: seems to have never worked properly due to incomplete implementation
- some fields have been deprecated in favor of properties
Removed:
- JecsTools' CompConsole and related Faction stuff (broken since RW B19)
- CompVehicles (broken and commented out since RW 1.1)
- CompProperties_OversizedWeapon.offset (mostly broken since version 1.0.9.3)
- some public classes and methods have been moved or removed

1.1.2.3 (05-09-2021)
========================
Update French translation (thanks qux!), rebuild to latest RW version

1.1.2.2 (10-23-2020)
========================