@@ -69,7 +69,7 @@ Improvements by lbmaian
 
 Thank you to my Patrons for supporting me in my efforts. Without you, none of this would be possible.
 
-These are the most excellent rim dwellers who support me: 
+These are the most excellent rim dwellers who support me:
 Michael Cailler, Jigsawjohn , Daniel Schott, Penelope Charli Whitman, Jerome Gonschorek, Genaeve , RainerWingel , Lea Stannard, David Silberstein, 수현 남, Matt Harris, Kiya Nicoll, Paul Fenwick, Matthew Isom, Elodie , Михаил Юрченко, Charlie Garnham, Populous25 , Landon Cash, Marcus Sireanu, Maaxar , logan sheppard-organ, TinyATuin, Don Homer, Sharp Spook, roxxploxx , Dan Jones, Kaz, Justin Andres, Alex Mederer, Justin , iknowdude00, E_T , Alexander , Ken Birdwell, Michael Cailler, Jigsawjohn , Daniel Schott, Penelope Charli Whitman, Jerome Gonschorek, Genaeve , RainerWingel , Lea Stannard, David Silberstein, 수현 남, Matt Harris, Kiya Nicoll, Paul Fenwick, Matthew Isom, Elodie , Михаил Юрченко, Charlie Garnham, Populous25 , Landon Cash, Marcus Sireanu, Maaxar , logan sheppard-organ, TinyATuin, Don Homer, Sharp Spook, roxxploxx , Dan Jones, Kaz, Justin Andres, Alex Mederer, Justin , iknowdude00, E_T , Alexander , Ken Birdwell
 
 ========================
@@ -131,6 +131,7 @@ New features and fixes:
   - knockDistance now accepts floating points
   - add knockDistanceAbsorbedPercentCurve and knockDistanceMassCurve that controls how damage soak and mass affect knock distance
   - improve push angle algorithm so that it's no longer always a diagonal
+  - prevent multiple knockbacks occurring due to multiple damage infos (e.g. extra damage) for same instigator+target
   - FlyingObject: configurable props (ProjectileProperties) and accuracyRadius
   - FlyingObject_Equipable allows equipping apparel along (not just weapons)
 - PawnShields: support generating biocoded shields when generating pawns
