@@ -10,7 +10,7 @@
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <Version>1.3.0.2</Version>
     <!--
-    For some reason, although SDK projects should default Deterministic to true, when importing this props build,
+    For some reason, although SDK projects should default Deterministic to true, when importing this props file,
     builds become non-deterministic unless Deterministic is explicitly set to true here.
     -->
     <Deterministic>true</Deterministic>
@@ -40,6 +40,6 @@
     </When>
   </Choose>
   <ItemGroup>
-    <PackageReference Include="Lib.Harmony" Version="2.1.0" ExcludeAssets="runtime" />
+    <PackageReference Include="Lib.Harmony" Version="2.1.*" ExcludeAssets="runtime" />
   </ItemGroup>
 </Project>
